welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:4: error: not found: value estBiscuit
    if ( estBiscuit()) {
         ^Program:3: error: type mismatch;
 found   : Unit
 required: Boolean
  for (compteur0 <- 1 to 7) {
                 ^