welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  var vuBiscuit=false
  for (compteur0 <- 1 to 7) {
    if ( estBiscuit()) {
      vuBiscuit == true
    } else {
      for (compteur <-1  to 6) {
        avance()
      }
      droite()
      avance()
      gauche()
    }
  }
}